# polars_python_rust_example

./: Cargo.toml  example.py
src/: ffi.rs  lib.rs
