[package]
name = "python_rust_compiled_function"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "my_polars_functions"
crate-type = ["cdylib"]

[dependencies]
polars = "0.28.0"
pyo3 = { version = "0.18.0", features = ["extension-module"] }
